--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,29 @@
-<h2>Book detail</h2>
+<% if flash[:notice] %>
+  <p id="notice">
+    <%= flash[:notice] %>
+  </p>
+<% end %>
+<% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+<% end %>
+
+<h2>Books</h2>
+
 <% @books.each do |book| %>
 <div>
-  <p><%= image_tag 'default-image.jpeg' %></p>
+
+  <p><%= image_tag book.user.get_profile_image(100,100) %></p>
   <p><%= book.user.name %></p>
-  <p><%= book.title %></p>
+  <span>
+    <%= link_to book.title, book_path(book) %>
+  </span>
   <p><%= book.body %></p>
 </div>
 <% end %>
@@ -23,7 +43,7 @@
   <h4>Title</h4>
   <%= f.text_field :title %>
 
-  <h4>Body</h4>
+  <h4>Opiniton</h4>
   <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
