--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -21,4 +21,7 @@
   
   <%= f.submit 'Update Book' %>
   
+  <%= link_to 'Show', book_path(@book) %>
+  <%= link_to 'Back', "/books" %>
+  
 <% end %>
