--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,3 @@
-<% if flash[:notice] %>
-  <p id="notice">
-    <%= flash[:notice] %>
-  </p>
-<% end %>
 <% if @book.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
@@ -14,37 +9,32 @@
     </div>
 <% end %>
 
-<h2>Books</h2>
+<div class="container px-5 px-sm-0">
+<div class="row">
 
-<% @books.each do |book| %>
-<div>
+<%= render 'list', user: current_user, book: @book %>
 
-  <p><%= image_tag book.user.get_profile_image(100,100) %></p>
-  <p><%= book.user.name %></p>
-  <span>
-    <%= link_to book.title, book_path(book) %>
-  </span>
-  <p><%= book.body %></p>
-</div>
-<% end %>
-
-<h2>New book</h2>
-
-<% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<div class="col-md-8 offset-md-1">
+<h1>Books</h1>
+<table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= link_to (image_tag book.user.get_profile_image(100,100)), user_path(book.user) %></td>
+      <td><%= link_to book.title, book_path(book) %></td>
+      <td><%= book.body %></td>
+    </tr>
     <% end %>
-  </ul>
-<% end %>
+</table>
+</div>
 
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-
-  <h4>Opiniton</h4>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
-<% end %>
+</div>
+</div>
