--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,29 +1,26 @@
-<% if flash[:notice] %>
-  <p id="notice">
-    <%= flash[:notice] %>
-  </p>
-<% end %>
-<% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-<% end %>
+<div class="container px-5 px-sm-0">
+<div class="row">
 
+<%= render 'books/list', user: @book.user, book: Book.new %>
 
+<div class="col-md-8 offset-md-1">
 <h1>Book detail</h1>
-
-<div>
-  <p><%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p><%= @book.user.name %></p>
-  <%= link_to @book.title, book_path(@book) %>
-  <p><%= @book.body %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@book.id) %>
-    <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
-  <% end %>
+<table class="table table-hover table-inverse">
+  <tbody>
+    <tr>
+      <td>
+        <%= link_to (image_tag @book.user.get_profile_image(100,100)), user_path(@book.user) %><br>
+        <%= link_to @book.user.name, user_path(@book.user) %>
+      </td>
+      <td><%= link_to @book.title, book_path(@book) %></td>
+      <td><%= @book.body %></td>
+      <% if @book.user == current_user %>
+      <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
+      <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？" %></td>
+      <% end %>
+    </tr>
+  </tbody>
+</table>
+  
+</div>
 </div>
