--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,28 @@
-<h1>Users</h1>
+<div class="container px-5 px-sm-0">
+<div class="row">
 
+<%= render 'books/list', user: current_user, book: @book %>
+
+<div class="col-md-8 offset-md-1">
+<h1>Users</h1>
+  <table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
   <% @users.each do |user| %>
-    <p>image</p>
-    <%= image_tag user.get_profile_image(100,100) %>
-    <p>name</p>
-    <%= user.name %>
-    <p><%= link_to "Show", user_path(user) %></p>
+    <tr>
+      <td><%= image_tag user.get_profile_image(100,100) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to "Show", user_path(user) %></td>
+    </tr>
   <% end %>
+  </table>
+  
+</div>
+</div>
