--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,33 +8,37 @@
       </ul>
     </div>
 <% end %>
-<!-- ユーザーの詳細 -->
-<h1>User info</h1>
-<div>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <h3>name</h3>
-  <%= @user.name %>
-  <h3>introduction</h3>
-  <%= @user.introduction %>
-  <% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
+
+
+<div class="container px-5 px-sm-0">
+<div class="row">
+
+<%= render 'books/list', user: @user, book: @book %>
 
 <!-- ユーザーの投稿一覧 -->
-<h1>Books</h1>
-<% @books.each do |book| %>
-<div>
-  <p><%= image_tag book.user.get_profile_image(100,100) %></p>
-  <p><%= book.user.name %></p>
-  <span>
-    <%= link_to book.title, book_path(book) %>
-  </span>
-  <p><%= book.body %></p>
-  <% if book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(book) %>
-    <%= link_to "Destroy", book_path(book), method: :delete, "data-confirm" => "本当に消しますか？" %>
-  <% end %>
-</div>
-<% end %>
+<div class="col-md-8 offset-md-1">
+<h2>Books</h2>
+<table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= link_to (image_tag book.user.get_profile_image(100,100)), user_path(book.user) %></td>
+      <td><%= link_to book.title, book_path(book) %></td>
+      <td><%= book.body %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 
+</div>
+
+</div>
+</div>
